btn fix on mobile version width

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -9,7 +9,6 @@
     padding: 1.5rem 3rem;
     font-size: 1.5rem;
     font-weight: 500;
-    max-width: 300px;
     line-height: 1.375rem;
     text-align: center;
     border-radius: 2.25rem;
@@ -28,6 +27,9 @@
             font-size: 1.4rem;
             font-weight: 500;
             border-radius: 1.8rem;
+        }
+        @media screen and (max-width: 425px) {
+            max-width: 300px;
         }
     }
 }
